--- a/emby.conf
+++ b/emby.conf
@@ -1,3 +1,6 @@
-# > JS 更新时间：2023-09-01
+# > SJX 更新时间：2023-09-01
 HOST, cdn2.misakaf.org, misakaf
+HOST, cm.emby.ws, dolpin
+HOST, cu.emby.ws, dolpin
+HOST, ct.emby.ws, dolpin
 IP-CIDR,146.56.36.1/32,pilipli
