--- a/emby.conf
+++ b/emby.conf
@@ -1,6 +1,6 @@
 # > SJX 更新时间：2023-09-01
 HOST, cdn2.misakaf.org, misakaf
-HOST, cm.emby.ws, dolpin
-HOST, cu.emby.ws, dolpin
-HOST, ct.emby.ws, dolpin
+HOST, cm.emby.ws, dolphin
+HOST, cu.emby.ws, dolphin
+HOST, ct.emby.ws, dolphin
 IP-CIDR,146.56.36.1/32,pilipli
