--- a/emby.conf
+++ b/emby.conf
@@ -1,5 +1,6 @@
 # > SJX 更新时间：2023-09-01
 HOST, cdn2.misakaf.org, misakaf
+HOST, push-kr.misakaf.org, misakaf
 HOST, cm.emby.ws, dolphin
 HOST, cu.emby.ws, dolphin
 HOST, ct.emby.ws, dolphin
