--- a/emby.conf
+++ b/emby.conf
@@ -4,4 +4,5 @@ HOST, push-kr.misakaf.org, misakaf
 HOST, cm.emby.ws, dolphin
 HOST, cu.emby.ws, dolphin
 HOST, ct.emby.ws, dolphin
+HOST, emby.hey.pw, hey
 IP-CIDR,146.56.36.1/32,pilipli
