--- a/emby.conf
+++ b/emby.conf
@@ -1,4 +1,5 @@
-# > SJX 更新时间：2023-09-01
+# > SJX 更新时间：2023-09-03
+# > EMBY直连
 HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
 HOST, cm.emby.ws, dolphin
@@ -6,3 +7,7 @@ HOST, cu.emby.ws, dolphin
 HOST, ct.emby.ws, dolphin
 HOST, emby.hey.pw, hey
 IP-CIDR,146.56.36.1/32,pilipli
+
+# > IPTV直连
+HOST, live.fanmingming.com, IPTV
+DOMAIN-SUFFIX, cntv.sbs, IPTV
