--- a/emby.conf
+++ b/emby.conf
@@ -1,4 +1,4 @@
-# > SJX 更新时间：2023-09-03
+# > SJX 更新时间：2023-09-08;增加pili cf
 # > EMBY直连
 HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
@@ -6,7 +6,8 @@ HOST, cm.emby.ws, dolphin
 HOST, cu.emby.ws, dolphin
 HOST, ct.emby.ws, dolphin
 HOST, emby.hey.pw, hey
-IP-CIDR,146.56.36.1/32,pilipli
+IP-CIDR, 146.56.36.1/32, pilipli
+HOST, pilipli-cf.emby77.org, pilipli
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
