--- a/emby.conf
+++ b/emby.conf
@@ -6,8 +6,8 @@ HOST, cm.emby.ws, dolphin
 HOST, cu.emby.ws, dolphin
 HOST, ct.emby.ws, dolphin
 HOST, emby.hey.pw, hey
-IP-CIDR, 146.56.36.1/32, pilipli
-HOST, pilipli-cf.emby77.org, pilipli
+IP-CIDR, 146.56.36.1/32, pilipili
+HOST, pilipili-cf.emby77.org, pilipili
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
