--- a/emby.conf
+++ b/emby.conf
@@ -1,4 +1,4 @@
-# > SJX 更新时间：2023-09-08;增加pili cf
+# > SJX 更新时间：2023-09-08;增加pilipli-cf
 # > EMBY直连
 HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
