--- a/emby.conf
+++ b/emby.conf
@@ -1,4 +1,4 @@
-# > SJX 更新时间：2023-09-08;增加pilipli-cf
+# > SJX 更新时间：2023-09-08;增加mtga
 # > EMBY直连
 HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
@@ -12,3 +12,6 @@ HOST, pilipili-cf.emby77.org, pilipili
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
 DOMAIN-SUFFIX, cntv.sbs, IPTV
+
+# > MTGA
+HOST-KEYWORD, wizards.com, MTGA
