--- a/emby.conf
+++ b/emby.conf
@@ -14,4 +14,4 @@ HOST, live.fanmingming.com, IPTV
 DOMAIN-SUFFIX, cntv.sbs, IPTV
 
 # > MTGA
-HOST-KEYWORD, wizards.com, MTGA
+DOMAIN-SUFFIX, wizards.com, MTGA
