--- a/emby.conf
+++ b/emby.conf
@@ -1,4 +1,4 @@
-# > SJX 更新时间：2023-09-19;增加mtga
+# > SJX 更新时间：2023-09-20;自己的直连
 # > EMBY直连
 HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
@@ -15,3 +15,8 @@ DOMAIN-SUFFIX, cntv.sbs, IPTV
 
 # > MTGA
 DOMAIN-SUFFIX, wizards.com, MTGA
+
+# > mail
+DOMAIN-SUFFIX, outlook.com, MAIL
+DOMAIN-SUFFIX, houtmail.com, MAIL
+DOMAIN-SUFFIX, live.com, MAIL
