--- a/emby.conf
+++ b/emby.conf
@@ -18,5 +18,5 @@ DOMAIN-SUFFIX, wizards.com, MTGA
 
 # > mail
 DOMAIN-SUFFIX, outlook.com, MAIL
-DOMAIN-SUFFIX, houtmail.com, MAIL
+DOMAIN-SUFFIX, hotmail.com, MAIL
 DOMAIN-SUFFIX, live.com, MAIL
