--- a/emby.conf
+++ b/emby.conf
@@ -2,9 +2,7 @@
 # > EMBY直连
 HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
-HOST, cm.emby.ws, dolphin
-HOST, cu.emby.ws, dolphin
-HOST, ct.emby.ws, dolphin
+HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
 IP-CIDR, 146.56.36.1/32, pilipili
 
