--- a/emby.conf
+++ b/emby.conf
@@ -5,7 +5,6 @@ HOST, push-kr.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
 IP-CIDR, 146.56.36.1/32, pilipili
-DOMAIN-SUFFIX, cachefly.net, pilipili
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
@@ -14,3 +13,5 @@ DOMAIN-SUFFIX, cntv.sbs, IPTV
 # > MTGA
 DOMAIN-SUFFIX, wizards.com, MTGA
 
+# > cachefly_CDN
+DOMAIN-SUFFIX, cachefly.net, cachefly
