--- a/emby.conf
+++ b/emby.conf
@@ -4,7 +4,7 @@ HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
-IP-CIDR, 146.56.36.1/32, pilipili
+HOST, pilipili.mikuu.link, pilipili 
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
