--- a/emby.conf
+++ b/emby.conf
@@ -4,7 +4,7 @@ HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
-HOST, pilipili.mikuu.link, pilipili 
+HOST, emby.pilipiliultra.com, pilipili-cf 
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
