--- a/emby.conf
+++ b/emby.conf
@@ -5,6 +5,7 @@ HOST, push-kr.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
 IP-CIDR, 146.56.36.1/32 ,PiliPili
+HOST, pilipili.mikuu.link, pilipli反代
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
