--- a/emby.conf
+++ b/emby.conf
@@ -4,6 +4,7 @@ HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
+DOMAIN-SUFFIX, pilipiliultra.top, pilipli主域名
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
