--- a/emby.conf
+++ b/emby.conf
@@ -4,7 +4,7 @@ HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
-DOMAIN-SUFFIX, pilipiliultra.top, pilipli主域名
+DOMAIN-SUFFIX, pilipiliultra.com, pilipli-cf
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
