--- a/emby.conf
+++ b/emby.conf
@@ -3,6 +3,7 @@
 HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
+HOST, emby.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
 DOMAIN-SUFFIX, pilipiliultra.com, pilipli-cf
 
