--- a/emby.conf
+++ b/emby.conf
@@ -2,6 +2,7 @@
 # > EMBY直连
 HOST, cdn2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
+HOST, stream3.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
