--- a/emby.conf
+++ b/emby.conf
@@ -7,6 +7,7 @@ HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
 DOMAIN-SUFFIX, pilipiliultra.com, pilipli-cf
+HOST, stream_pilipili.misakaf.org, pilipli-stream
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
