--- a/emby.conf
+++ b/emby.conf
@@ -1,6 +1,7 @@
 # > SJX 更新时间：2024-01-16;自己的直连
 # > EMBY直连
 HOST, cdn2.misakaf.org, misakaf
+HOST, emby2.misakaf.org, misakaf
 HOST, push-kr.misakaf.org, misakaf
 HOST, stream3.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
