--- a/emby.conf
+++ b/emby.conf
@@ -7,6 +7,7 @@ HOST, stream3.misakaf.org, misakaf
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
+DOMAIN-SUFFIX, 581658.best, flyrainbow
 DOMAIN-SUFFIX, pilipiliultra.com, pilipli-cf
 HOST, stream_pilipili.misakaf.org, pilipli-stream
 
