--- a/emby.conf
+++ b/emby.conf
@@ -9,6 +9,7 @@ HOST, emby.hey.pw, hey
 DOMAIN-SUFFIX, 7777777.buzz, flyrainbow
 DOMAIN-SUFFIX, pilipiliultra.com, pilipli-cf
 HOST, stream_pilipili.misakaf.org, pilipli-stream
+HOST, emby.tnx.one, tiannanxiaozhu
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
