--- a/emby.conf
+++ b/emby.conf
@@ -10,6 +10,7 @@ DOMAIN-SUFFIX, 7777777.buzz, flyrainbow
 DOMAIN-SUFFIX, pilipiliultra.com, pilipli-cf
 HOST, stream_pilipili.misakaf.org, pilipli-stream
 HOST, emby.tnx.one, tiannanxiaozhu
+DOMAIN-SUFFIX, tanhuatv.site, tanhua
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
