--- a/emby.conf
+++ b/emby.conf
@@ -9,6 +9,8 @@ HOST, emby.hey.pw, hey
 DOMAIN-SUFFIX, 7777777.buzz, flyrainbow
 HOST, stream_pilipili.misakaf.org, pilipli-stream
 HOST, emby.tnx.one, tiannanxiaozhu
+DOMAIN-SUFFIX, pilipili.club, pilipli主域名
+DOMAIN-SUFFIX, css.pilipili.club, pilipli-cf
 
 # > IPTV直连
 HOST, live.fanmingming.com, IPTV
