--- a/emby.conf
+++ b/emby.conf
@@ -8,7 +8,7 @@ HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
 DOMAIN-SUFFIX, 7777777.buzz, flyrainbow
 HOST, stream_pilipili.misakaf.org, pilipli-stream
-HOST, pilipili.misakaf.org, pilipli-stream
+HOST, pilipili.misakaf.org, misakaf-pilipili
 HOST, emby.tnx.one, tiannanxiaozhu
 DOMAIN-SUFFIX, pilipili.club, pilipli主域名
 DOMAIN-SUFFIX, css.pilipili.club, pilipli-cf
