--- a/emby.conf
+++ b/emby.conf
@@ -20,3 +20,6 @@ DOMAIN-SUFFIX, cntv.sbs, IPTV
 # > MTGA
 DOMAIN-SUFFIX, wizards.com, MTGA
 DOMAIN-SUFFIX, w2.mtgarena.com, MTGA
+
+# > cachefly_CDN
+DOMAIN-SUFFIX, cachefly.net, cachefly
