--- a/emby.conf
+++ b/emby.conf
@@ -1,6 +1,7 @@
 # > SJX 更新时间：2024-01-16;自己的直连
 # > EMBY直连
 DOMAIN-SUFFIX, misakaf.org, misakaf
+DOMAIN-SUFFIX, zox.show, Zox/Acemby
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
 DOMAIN-SUFFIX, 7777777.buzz, flyrainbow
@@ -11,7 +12,6 @@ DOMAIN-SUFFIX, pilipili.club, pilipli主域名
 DOMAIN-SUFFIX, css.pilipili.club, pilipli-cf
 
 # > IPTV直连
-HOST, live.fanmingming.com, IPTV
 DOMAIN-SUFFIX, cntv.sbs, IPTV
 
 # > MTGA
