--- a/emby.conf
+++ b/emby.conf
@@ -10,6 +10,7 @@ HOST, pilipili.misakaf.org, misakaf-pilipili
 HOST, emby.tnx.one, tiannanxiaozhu
 DOMAIN-SUFFIX, pilipili.club, pilipli主域名
 DOMAIN-SUFFIX, css.pilipili.club, pilipli-cf
+DOMAIN-SUFFIX, 285286.xyz, temby
 
 # > IPTV直连
 DOMAIN-SUFFIX, cntv.sbs, IPTV
