--- a/emby.conf
+++ b/emby.conf
@@ -1,6 +1,6 @@
 # > SJX 更新时间：2024-01-16;自己的直连
 # > EMBY直连
-DOMAIN-SUFFIX, misakaf.org, misakaf
+DOMAIN-SUFFIX, mius.uk, 牢大
 DOMAIN-SUFFIX, zox.show, Zox/Acemby
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
