--- a/emby.conf
+++ b/emby.conf
@@ -5,7 +5,7 @@ DOMAIN-SUFFIX, zox.show, Zox/Acemby
 HOST, em.tnx.one, tiannanxiaozhu
 HOST, emby.hey.pw, hey
 DOMAIN-SUFFIX, 7777777.buzz, flyrainbow
-HOST, stream_pilipili.misakaf.org, pilipli-stream
+DOMAIN-SUFFIX, pilipiliultra.com, pilipli-stream
 HOST, pilipili.misakaf.org, misakaf-pilipili
 HOST, emby.tnx.one, tiannanxiaozhu
 DOMAIN-SUFFIX, pilipili.club, pilipli主域名
