--- a/emby.conf
+++ b/emby.conf
@@ -1,15 +1,5 @@
-# > SJX 更新时间：2024-01-16;自己的直连
+# > SJX 更新时间：2025-09-07;自己的直连，只保留temby
 # > EMBY直连
-DOMAIN-SUFFIX, mius.uk, 牢大
-DOMAIN-SUFFIX, zox.show, Zox/Acemby
-HOST, em.tnx.one, tiannanxiaozhu
-HOST, emby.hey.pw, hey
-DOMAIN-SUFFIX, 7777777.buzz, flyrainbow
-DOMAIN-SUFFIX, pilipiliultra.com, pilipli-stream
-HOST, pilipili.misakaf.org, misakaf-pilipili
-HOST, emby.tnx.one, tiannanxiaozhu
-DOMAIN-SUFFIX, pilipili.club, pilipli主域名
-DOMAIN-SUFFIX, css.pilipili.club, pilipli-cf
 DOMAIN-SUFFIX, 285286.xyz, temby
 
 # > IPTV直连
